--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "main": "path/to/main.css",
   "dependencies": {
     "underscore": "~1.6.0",
-    "handlebars": "~1.3.0"
+    "handlebars": "~1.3.0",
+    "jquery": "~2.1.0"
   },
   "version": "0.0.0",
   "ignore": [
