--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "underscore": "~1.6.0",
     "handlebars": "~1.3.0",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "moment": "~2.5.1"
   },
   "version": "0.0.0",
   "ignore": [
