--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "grunt-ember-handlebars": "*",
     "grunt-bower": "*",
     "http-proxy": "*",
-    "express": "*"
+    "express": "*",
+    "request": "*",
+    "bower": "*",
+    "shrinkwrap": "*",
+    "simple-http-proxy": "*"
   }
 }
